--- a/InspectorCaymanSUpdater/InspectorCaymanSUpdater.csproj
+++ b/InspectorCaymanSUpdater/InspectorCaymanSUpdater.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
